--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-react": "^0.8.0",
-        "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-react": "^2.0.0",
         "autoprefixer": "^10.4.2",
@@ -22,6 +19,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@inertiajs/react": "^1.0.2",
         "tw-elements": "^1.0.0-alpha12"
     }
 }
