--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
         "postcss": "^8.4.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.2.0",
         "vite": "^3.0.0"
     },
     "dependencies": {
         "@inertiajs/react": "^1.0.2",
-        "tw-elements": "^1.0.0-alpha12"
+        "tw-elements": "^1.0.0-beta1"
     }
 }
