--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "dependencies": {
         "@inertiajs/react": "^1.0.2",
+        "html-entities": "^2.3.3",
+        "react-simple-wysiwyg": "^2.1.4",
         "tw-elements": "^1.0.0-beta1"
     }
 }
