--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.2",
-        "axios": "^0.27",
+        "axios": "^1.6.7",
         "laravel-vite-plugin": "^0.7.7",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
@@ -22,6 +22,7 @@
         "@inertiajs/react": "^1.0.2",
         "html-entities": "^2.3.3",
         "react-simple-wysiwyg": "^2.1.4",
+        "tailwind-merge": "^2.2.1",
         "tw-elements": "^1.0.0-beta1"
     }
 }
